--- a/001-where.org
+++ b/001-where.org
@@ -4,33 +4,39 @@ Plans for the next morning, included: Wander around in the woods with Gog. Gog a
 
 Grav and Gog had been same-cousins[fn:: First cousins] and highest-friends for their whole lives. They'd been living together in Bhorv Zolk for about half of that time, off and on throughout their lives.
 
-They had the same instinct for benefit-crazy-think, a term that means, "to benefit from free and open thinking and doing." Both realized, through their endless talking about ideas, that if you explore the idea places that no one else would because they were lazy or superstitious, you would more easily find value-stones of ideas that, because they were original and unexplored, were more profitable than average.
+They had the same instinct for benefit-crazy-think, a term that means, "To benefit from free and open thinking and doing." In other words, to experiment. Both realized, through their endless talking about ideas, that if you explore the idea places that no one else will because they are lazy or superstitious, you would more easily find value-stones of ideas that, because they were original, unexplored, and sometimes striking in their unusualness, were more profitable than average.
 
 Grav and Gog were no longer children. Their minds had sort of overlapped, after years of complex communication. There was nothing supernatural or exceptional about this. It happens all the time, and they were just a slightly higher-functioning example. They, together, had some pretty amazing ideas. Some would call this relationship a "friendship".
 
 Grav and Gog /were/ friends. They were also, accomplished gentleman philosophers. The advantage they could have had over people was immense, but they used their powers for good. They wanted to have fun and wanted for everyone else to have fun.
 
-Not everyone was of this mind. Verk was staying in the burrow just two down from Grav, and inevitably they would run into each other. Often this was in the relief-burrow, as had happened recently. The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the sides so that sound would naturally dampen. The walls were also gently curved from top-to-bottom. It offered the predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
+Not everyone was of this mind. Verk was staying in the burrow just two down from Grav, and inevitably they would run into each other. Often this was in the relief-burrow, as had happened the night before.
+
+The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the sides so that sound would naturally dampen. The walls were also gently curved from top-to-bottom. It offered the predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
 
 In addition to this, there was a snaking entranceway into the relief-burrow that had two intentional characteristics: As the other end of this passage was facing the opening of the cave system to receive the most sunlight this would make the relief-cave more well-lit (as the walls, floor and ceiling of this passage were polished) but it would also catch the eye when someone was making their way into the burrow. It also had a couple of switchbacks, so the passage could be made longer and prevent a direct view into the burrow, for the Crec were not shy about pooping together, but they did think of the relief-burrow as unclean; a kind of topic and thing that should be kept hidden, but without overdoing it.
 
+Yes, carving out an enormous room did take years. It would take a single person several lifetimes. But there were many hands to help and enough demand to make it a "not-think-thought".
+
+The Crec had the kind of sophistication and coordination abilities that you might find in a rather-out-of-the-way, mid-sized bronze age settlment thousands of kilometers from Babylon. The Forest may have indeed been just that exactly. They would not be able to offer much more than speculation themselves. It's plausible. Either way, these things vary over distance as well as time. They were just doing them, and were not /all/ morons.
+
 /A/ point to all of this is that the relief-burrow, given the right level of vigilance, could be thought of as reasonably suited for private conversations.
 
-And as the day before, Verk and Grav found themselves in such a "conversation" this morning. But this time, there were no ears to witness. And both men were practiced as judiciously using the relief-borrow to "clay-talk".
+And as the day before, Verk and Grav found themselves in such a "conversation" this morning. But this time, there were no ears to witness. Both men were noted early-risers. And both men were practiced at judiciously using the relief-borrow for "clay-talk".
 
-Verk had, what for Grav was a very unsettling characteristic as a person: He was a complete prolapsed-bison-rectum whenever he and Grav talked in truly private circumstances. He would be a slapper of shoulders and grinner of grins in more-or-less public circumstances. He seemed to be spending his life pretending to run for Elders-Quarum. As for his public behavior, something very close to that would be the only reasonable assumption for a neutral observer: "Oh, he appears to be trying to sell his persona actively to people for some gain", a very articulate and objective caveperson would say. And if he just shuts that off completely and becomes a different, increasingly nasty person in his presence, Grav was not just quite sure what to do with that.
+Verk had, what for Grav was a very unsettling characteristic as a person: He was a complete prolapsed-bison-rectum whenever he and Grav talked in truly private circumstances. He would be a slapper of shoulders and grinner of grins in more-or-less public circumstances. He seemed to be spending his life pretending to run for Elders-Quarum. As for his public behavior, something very close to that would be the only reasonable assumption for a neutral observer: /This person appears to be trying to sell his persona actively to people for some gain/, a very articulate and objective caveperson would say. And if he just shuts that off completely and becomes a different, increasingly nasty person in his presence, Grav was not just quite sure what to do with that.
 
 Verk automatically smiled broadly at Grav as he walked into the otherwise empty relief-burrow to see Grav urinating with his back to the entrance. Grav therefore did not see this smile, though he knew someone was there.
 
-"Grav, what is the good word?", Verk said sharply, causing Grav's head to jerk around a bit too far.
+"Grav, what is the good grunt?!", Verk said sharply, causing Grav's head to jerk around a bit too far.
 
-"Good morning Father-Brother Verk. Father-Brother Verk, I was genuinely taken aback by our words from yesterday. I /do/ feel the way you do about our Forest. I know, trust me. I will /never/ forget. My feelings /also/ are quite strong.
+"Good morning Father-Brother Verk. Father-Brother Verk, I was genuinely taken aback by our words from yesterday. I /do/ feel the way you do about our Forest. I know...about all that stuff. trust me. I will /never/ forget. My feelings /also/ are quite strong.
 
 What have I done? Please, believe me; my conscience is free and I want to learn from you."
 
-"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticible anger still."
+"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticible anger still. Nice of you to at least notice I'm put-out with you. Your lot seems alwayser more oblivious."
 
-Grav was sure at least some kind of hint was to follow this. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation.
+Grav was sure at least some kind of hint was to follow this. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think. It often seemed that Verk could make it harder for him to do this, as if he had some /power/ that made you instinctively 'squirm' in a mental sense, as opposed to 'gather your thoughts and give a meaningful, honest response'. /It was as much Verk himself as it was that people had allowed Verk to/ become /this way/, Grav guessed.
 
 "Yes, Father-Brother Verk. I will. Please forgive me. It is a large stone you put upon me. As you say, I will likely learn more if I do some discovery myself. That way I will remember stronger, as it is surely a grave misstep."
 
