--- a/_notes.org
+++ b/_notes.org
@@ -41,7 +41,8 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
-- I like the expression "why dost thou smite meeee!" as a ritual kind of thing that's as unconscious as "Allahu Akbar" or "Bless You". But screamed at the sky during the hight of frustration, of course.
+- "Now, Gak, you've got a situation here with that boy of yours. He's mostly just runnin' around messin' with his stick and hanging out with girls. See, if he was an all-finger or more, that'd be good news for you, 'grandpa', but sometimes it's just unseemly. I saw him smelling a quiet-one's pile. Time was, you could drown a wretched runt like that in the river with a good hemp basket and a rock. The do-gooder Forest-Deer and there meddlin in family life put an end to that! But..."
+- I like the expression "thou dost smite meeee!"[fn:: Notice, not a question like 'why...?', this is The-Ender you are talking to.] as a ritual kind of thing that's as unconscious as "Allahu Akbar" or "Bless You". But screamed at the sky during the hight of frustration, of course. Sometimes, as the "eeeeeeeee" is lengthened, the frustration goes vertical, as someone is high up a tree wrenching on a beehive. Usually, this last jerk of rage-derived power is enough to at least "unstick" the frustrating situation (You might imagine the beehive coming loose and the caveman falling 4 stories onto packed mud, as the last 'eeee...' trails off as he lays in his crater.)
 - The word "think-long" is the transliteration of the compound word of theirs tha means "rational" in pretty much the sense that we mean it. It is a slur because, while it has been observed that rational thought bears good results often, the overwhelming majority of data showed that, when your life depends on it, as it nearly always does, relying on the supernatural bears better results. Therefore, being think-long (rational) is to just waste time and look like a good, naive target for pouncing instead of learning and practicing The Art that would likely save your life one day. rational: insult.
 - The big reveal at the end: bad 'bad' guys and 'good' guys literally just go their separate ways.
 - ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's booth their wine and their sacrament wine. Pretty much everything else is devil weed, but G&G are bold, fit psychonauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
