--- a/001-where.org
+++ b/001-where.org
@@ -4,7 +4,7 @@ Plans for the next morning, included: Wander around in the woods with Gog. Gog a
 
 Grav and Gog had been same-cousins[fn:: First cousins] and highest-friends for their whole lives. They'd been living together in Bhorv Zolk for about half of that time, off and on throughout their lives.
 
-They had the same instinct for benefit-crazy-think, a term that means, "To benefit from free and open thinking and doing." In other words, to experiment. Both realized, through their endless talking about ideas, that if you explore the idea places that no one else will because they are lazy or superstitious, you would more easily find value-stones of ideas that, because they were original, unexplored, and sometimes striking in their unusualness, were more profitable than average.
+They had the same instinct for benefit-crazy-think, a term that means, "To benefit from free and open thinking and doing." In other words, to experiment. Both realized, through their endless talking about ideas, that if you explore the idea places that no one else will because they are lazy or superstitious, you will more easily find value-stones[fn:: This just means 'gem', but the literal meaning of the constituent words and their order is exactly what the Crec say. The concept of 'value' is one of Grav's obsessions. He therefore is one of relatively few who ever stopped, once in their life, to decompose this particular word and realize, like you have done at least once: Oh neat. it's X + Y. I've been using this word my whole life and I only just now realized!'] of ideas that, because they were original, unexplored, and sometimes striking in their unusualness, were more profitable than average.
 
 Grav and Gog were no longer children. Their minds had sort of overlapped, after years of complex communication. There was nothing supernatural or exceptional about this. It happens all the time, and they were just a slightly higher-functioning example. They, together, had some pretty amazing ideas. Some would call this relationship a "friendship".
 
