--- a/001-where.org
+++ b/001-where.org
@@ -10,11 +10,11 @@ Both realized, through their endless talking about ideas, that if you explore th
 
 Grav and Gog were no longer children. Their minds had sort of overlapped, after years of complex communication. There was nothing supernatural or exceptional about this. It happens all the time, and they were just a slightly higher-functioning example. They, together, had some pretty amazing ideas. Some would call this relationship a "friendship".
 
-Grav and Gog /were/ friends. They were also, accomplished gentleman philosophers. The advantage they could have had over people was immense, but they used their powers for good. They wanted to have fun and wanted for everyone else to have fun.
+Grav and Gog /were/ friends. They were also, accomplished gentleman philosophers. The advantage they could have had over people was immense, but they used their powers for good. They wanted to have fun and wanted for everyone else to have fun. Like many good people, they saw a spoil-sport as a kind of project for them to undertake, or possibly of someone who just needed to have a good cry, for which they were always willing and able to bring forth, with purity of heart.
 
 Not everyone was of this mind. Verk was staying in the burrow just two down from Grav, and inevitably they would run into each other. Often this was in the relief-burrow, as had happened the night before.
 
-The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the sides so that sound would naturally dampen. The walls were also gently curved from top-to-bottom. It offered the predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
+The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the perimeter so that sound would naturally dampen. The walls were also gently curved from top-to-bottom. It offered the predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
 
 In addition to this, there was a snaking entranceway into the relief-burrow that had two intentional characteristics: As the other end of this passage was facing the opening of the cave system to receive the most sunlight this would make the relief-cave more well-lit (as the walls, floor and ceiling of this passage were polished) but it would also catch the eye when someone was making their way into the burrow. It also had a couple of switchbacks, so the passage could be made longer and prevent a direct view into the burrow, for the Crec were not shy about pooping together, but they did think of the relief-burrow as unclean; a kind of topic and thing that should be kept hidden, but without overdoing it.
 
