--- a/001-where.org
+++ b/001-where.org
@@ -10,7 +10,7 @@ Both realized, through their endless talking about ideas, that if you explore th
 
 Grav and Gog were no longer children. Their minds had sort of overlapped, after years of complex communication. There was nothing supernatural or exceptional about this. It happens all the time, and they were just a slightly higher-functioning example. They, together, had some pretty amazing ideas. Some would call this relationship a "friendship".
 
-Grav and Gog /were/ friends. They were also accomplished gentleman philosophers. The advantage they could have had over people was immense, but they used their powers for good. They wanted to have fun and wanted for everyone else to have fun. Like many good people, they saw a spoil-sport as a kind of project for them to undertake; someone who needed some loosening up, or possibly someone who just needed to have a good cry, for which they were always willing and able to bring forth, with purity of heart.
+Grav and Gog /were/ friends. They were also accomplished gentleman philosophers. The advantage they could have had over people was immense, but they used their powers for good. They wanted to have fun and wanted for everyone else to have fun. Like many good people, they saw a spoil-sport as a kind of project for them to undertake; someone who needed some loosening up, or possibly someone who just needed to have a good cry, which they were always willing and able to help bring forth, with purity of heart.
 
 Not everyone was of this mind. Verk was staying in the burrow just two down from Grav, and inevitably they would run into each other. Often this was in the relief-burrow, as had happened the night before.
 
