--- a/001-where.org
+++ b/001-where.org
@@ -16,7 +16,9 @@ Not everyone was of this mind. Verk was staying in the burrow just two down from
 
 The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the perimeter so that sound would naturally dampen. The walls were also gently bowed outward from top-to-bottom. It offered the predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
 
-There was a constant, slight gurgling of water. Although minimal and somewhat termpermental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and utterly maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one thing down for each one half of one boulder-door thing over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where the immense gurgling pot of cold water overflowed continuously. This was enough to create a small river from the entrance side of the room, around each half-circle of gutter, to the opposite side, closest to the hill's exterior, for the whole circular gutter was slightly tilted in this way. Once the water met the far side of the room (Where Grav noticed some mesmerizing patterns made by the two "rivers" colliding head-on.), relieved by a few arm-sized holes heading down what everyone always though of as "the back of the mountain".
+There was a constant, slight gurgling of water. Although minimal and somewhat termpermental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and utterly maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one thing down for each one half of one boulder-door thing over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where the immense gurgling pot of cold water overflowed continuously.
+
+This was enough to create two small semiciruclar rivers from the entrance side of the room, around each half-circle of gutter, to the opposite side, closest to the hill's exterior, for the whole circular gutter was slightly tilted in this way. Once the water met the far side of the room (Where Grav noticed some mesmerizing patterns made by the two "rivers" colliding head-on.), relieved by a few arm-sized holes heading down what everyone always though of as "the back of the mountain".
 
 In addition to this, there was a snaking entranceway into the relief-burrow that had two intentional characteristics: As the other end of this passage was facing the opening of the cave system to receive the most sunlight this would make the relief-cave more well-lit (as the walls, floor and ceiling of this passage were polished) but it would also catch the eye when someone was making their way into the burrow. It also had a couple of switchbacks, so the passage could be made longer and prevent a direct view into the burrow, for the Crec were not shy about pooping together, but they did think of the relief-burrow as unclean; a kind of topic and thing that should be kept hidden, but without overdoing it.
 
