--- a/001-where.org
+++ b/001-where.org
@@ -24,9 +24,9 @@ This arrangement both took all your business briskly away, but it also thoroughl
 
 In addition to this, there was a snaking entranceway into the relief-burrow that had two intentional characteristics: As the other end of this passage was facing the opening of the cave system to receive the most sunlight this would make the relief-cave more well-lit (as the walls, floor and ceiling of this passage were polished) but it would also catch the eye when someone was making their way into the burrow. It also had a couple of switchbacks, so the passage could be made longer and prevent a direct view into the burrow, for the Crec were not shy about pooping together, but they did think of the relief-burrow as unclean; a kind of topic and thing that should be kept hidden, but without overdoing it.
 
-Yes, carving out an enormous room did take years. It would take a single person several lifetimes. But there were many hands to help and enough demand to make it a "not-think-thought".
+Yes, carving out an enormous room did take years. It would take a single person several lifetimes. But there were many hands to help and enough demand to make it a "not-think-thought". It took centuries of struggle and countless lives for the Crec and surrounding Forest to brute-force this kind of sophistication. It was a matter of survival. In a way, all of this was driven by the love of children. A humble Crec of note once remarked, "If we have gone further than others, it is because we are standing on a pile of bodies."
 
-The Crec had the kind of sophistication and coordination abilities that you might find in a rather-out-of-the-way, mid-sized bronze age settlment thousands of kilometers from Babylon. The Forest may have indeed been just that exactly. They would not be able to offer much more than speculation themselves. It's plausible. Either way, these things vary over distance as well as time. They were just doing them, and were not /all/ morons.
+The Crec had the kind of sophistication and coordination abilities that you might find in a rather-out-of-the-way, mid-sized bronze age settlement thousands of kilometers from Babylon. The Forest may have indeed been just that exactly. They would not be able to offer much more than speculation themselves. It's plausible. Either way, these things vary over distance as well as time. They were just doing them, and were not /all/ morons. There's a whole bunch you don't know about the "archeological record".
 
 /A/ point to all of this is that the relief-burrow, given the right level of vigilance, could be thought of as reasonably suited for private conversations.
 
