--- a/001-where.org
+++ b/001-where.org
@@ -42,9 +42,9 @@ Verk automatically smiled broadly at Grav as he walked into the otherwise empty 
 
 What have I done? Please, believe me; my conscience is free and I want to learn from you."
 
-"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticible anger still. Nice of you to at least notice I'm put-out with you. Your lot seems alwayser more oblivious."
+"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticible anger still. Nice of you to at least notice I'm put-out with you. Your lot forgotten a lot more than you think you know.
 
-Grav was sure at least some kind of hint was to follow this. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think. It often seemed that Verk could make it harder for him to do this, as if he had some /power/ that made you instinctively 'squirm' in a mental sense, as opposed to 'gather your thoughts and give a meaningful, honest response'. /It was as much Verk himself as it was that people had allowed Verk to/ become /this way/, Grav guessed.
+While trying to decipher that, Grav was sure at least some kind of helpful hint was to follow this. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think. It often seemed that Verk could make it harder for him to do this, as if he had some /power/ that made you instinctively 'squirm' in a mental sense, as opposed to 'gather your thoughts and give a meaningful, honest response'. /It was as much Verk himself as it was that people had allowed Verk to/ become /this way/, Grav guessed.
 
 "Yes, Father-Brother Verk. I will. Please forgive me. It is a large stone you put upon me. As you say, I will likely learn more if I do some discovery myself. That way I will remember stronger, as it is surely a grave misstep."
 
