--- a/001-where.org
+++ b/001-where.org
@@ -52,13 +52,13 @@ It often seemed that Verk could make it harder for him to do this, as if he had 
 
 Verk made a hissing sound that Grav couldn't categorize for meaning, as he could not comfortably turn to look at Verk.
 
-"What are you doing today?", asked Verk, still not /using/ the relief-burrow, but now standing where Grav could comfortably look at him, now facial expressions could be used to hopefully gather or send more nuance. However Grav found this too confusing and difficult to do in what he thought was the /usual/ way with Verk.
+"What are you doing today?", asked Verk, still not /using/ the relief-burrow, but now standing where Grav could comfortably look at him, now facial expressions could be used to hopefully glean more meaning from inscrutable Verk.
 
 "Oh!" Grav was both excited to share some news and thankful for the change of topic. "Father-Brother Verk, Gog and I..."
 
 Verk hissed again but Grav now could see that he was huffing with contempt, with an oddly abbreviated roll of the eyes.
 
-"Gog, huh? You two fancy boys going deep into the woods today?", Verk made a complex dance of facial expressions and other gestures that Grav could not decipher, other than to note that maybe there was now glee. "Stay away from the bachelor-tree, you two." Verk made a sour, disdainful face. Grav thought that he could interpret this as an invitation to "yuck it up" with another man using banana-humor. He knew well that that was not the case here. So he responded with indignancy, as he knew he should.
+"Gog, huh? You two copulating-monkey boys going deep into the woods today?", Verk made a complex dance of facial expressions and other gestures that Grav could not decipher, other than to note that maybe there was now glee. "Stay away from the bachelor-tree, you two." Verk made a sour, disdainful face. Grav thought that he could interpret this as an invitation to "yuck it up" with another man using banana-humor. He knew well that that was not the case here. So he responded with indignancy, as he knew he should.
 
 "Father-Brother Verk! I would never! Please, there could be a quiet-one nearing in the entrance."
 
